# CoreWars

./: DWARFcOREaDDDR  README.md  corewars.cabal  geminiProgPbj  instructionsPseudo
app/: Ansi.hs  Main.hs
redcode/: Dwarf.txt
redcodeProg/: Dwarf.txt  Gemini.txt  Imp.txt
