name:                corewars
version:             0.1.0.0
description:         Implementation of original CoreWars Game in Haskell
author:              Sean Durban
category:            Concurrent
build-type:          Simple
license:             OtherLicense
cabal-version:       >=1.10

executable corewars
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Ansi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.2 && < 5
                       ,text
                       ,containers

  default-language:    Haskell2010
